--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Thank you for taking the time to help us improve the platform</h2>
 <body>
     <form id="base">
-
+        <button type="button">boton</button>
 
     </form>
 </body>
